--- a/Live-App.html
+++ b/Live-App.html
@@ -80,7 +80,7 @@
                     <li class="jq-nav-option">
                         <a href="Live-Notice.html">平台公告</a>
                     </li>
-                    <li class="jq-nav-option">
+                    <li class="jq-nav-option active">
                         <a href="Live-App.html">手机APP</a>
                     </li>
                 </ul>
