--- a/Live-Entertainment.html
+++ b/Live-Entertainment.html
@@ -68,7 +68,7 @@
             </div>
             <div class="nav-container">
                 <ul class="container clear">
-                    <li class="jq-nav-option">
+                    <li class="jq-nav-option active">
                         <a href="Live-Entertainment.html">真人娱乐</a>
                     </li>
                     <li class="jq-nav-option">
