--- a/Member-DailyRecord.html
+++ b/Member-DailyRecord.html
@@ -171,9 +171,9 @@
                                         <div class="tr">
                                             <div class="th">充值时间</div>
                                             <div class="th">充值金额</div>
-                                            <div class="th">充值方式</div>
+                                            <!-- <div class="th">充值方式</div> -->
                                             <div class="th">状态</div>
-                                            <div class="th">操作</div>
+                                            <!-- <div class="th">操作</div> -->
                                         </div>
                                     </div>
                                     <div class="tbody"></div>
@@ -185,8 +185,8 @@
                                             <div class="th">提款日期</div>
                                             <div class="th">提款金额</div>
                                             <div class="th">状态</div>
-                                            <div class="th">提款状态</div>
-                                            <div class="th">操作</div>
+                                            <!-- <div class="th">提款状态</div> -->
+                                            <!-- <div class="th">操作</div> -->
                                         </div>
                                     </div>
                                     <div class="tbody"></div>
@@ -196,10 +196,10 @@
                                     <div class="thead">
                                         <div class="tr">
                                             <div class="th">申请时间</div>
-                                            <div class="th">优惠类型</div>
+                                            <!-- <div class="th">优惠类型</div> -->
                                             <div class="th">优惠金额</div>
                                             <div class="th">状态</div>
-                                            <div class="th">操作</div>
+                                            <!-- <div class="th">操作</div> -->
                                         </div>
                                     </div>
                                     <div class="tbody"></div>
@@ -209,10 +209,10 @@
                                     <div class="thead">
                                         <div class="tr">
                                             <div class="th">申请时间</div>
-                                            <div class="th">转帐类型</div>
+                                            <!-- <div class="th">转帐类型</div> -->
                                             <div class="th">转帐金额</div>
                                             <div class="th">状态</div>
-                                            <div class="th">操作</div>
+                                            <!-- <div class="th">操作</div> -->
                                         </div>
                                     </div>
                                     <div class="tbody"></div>
@@ -607,12 +607,12 @@
                                                 .ua_add_datetime + '</div>' +
                                                 '<div class="td" data-title="充值金额">' + data.body.list[i]
                                                 .ua_value + '</div>' +
-                                                '<div class="td" data-title="充值方式">' + 'none' +
-                                                '</div>' +
+                                                // '<div class="td" data-title="充值方式">' + 'none' +
+                                                // '</div>' +
                                                 '<div class="td" data-title="状态">' + data.body.list[i].ua_status +
-                                                '</div>' +
-                                                '<div class="td" data-title="操作">' + 'none' + '</div>' +
                                                 '</div>'
+                                                // '<div class="td" data-title="操作">' + 'none' + '</div>' +
+                                                // '</div>'
                                             )
                                         }
                                         break;
@@ -632,11 +632,11 @@
                                                 '<div class="td" data-title="提款金额">' + data.body.list[i]
                                                 .ua_value + '</div>' +
                                                 '<div class="td" data-title="状态">' + data.body.list[i].ua_status +
-                                                '</div>' +
-                                                '<div class="td" data-title="提款状态">' + 'none' +
-                                                '</div>' +
-                                                '<div class="td" data-title="操作">' + 'none' + '</div>' +
                                                 '</div>'
+                                                // '<div class="td" data-title="提款状态">' + 'none' +
+                                                // '</div>' +
+                                                // '<div class="td" data-title="操作">' + 'none' + '</div>' +
+                                                // '</div>'
                                             )
                                         }
                                         break;
@@ -653,14 +653,14 @@
                                                 '<div class="tr">' +
                                                 '<div class="td" data-title="申请时间">' + data.body.list[i]
                                                 .ua_add_datetime + '</div>' +
-                                                '<div class="td" data-title="优惠类型">' + 'none' +
-                                                '</div>' +
+                                                // '<div class="td" data-title="优惠类型">' + 'none' +
+                                                // '</div>' +
                                                 '<div class="td" data-title="优惠金额">' + data.body.list[i]
                                                 .ua_value + '</div>' +
                                                 '<div class="td" data-title="状态">' + data.body.list[i].ua_status +
-                                                '</div>' +
-                                                '<div class="td" data-title="操作">' + 'none' + '</div>' +
                                                 '</div>'
+                                                // '<div class="td" data-title="操作">' + 'none' + '</div>' +
+                                                // '</div>'
                                             )
                                         }
                                         break;
@@ -677,14 +677,14 @@
                                                 '<div class="tr">' +
                                                 '<div class="td" data-title="申请时间">' + data.body.list[i]
                                                 .ua_add_datetime + '</div>' +
-                                                '<div class="td" data-title="转帐类型">' + 'none' +
-                                                '</div>' +
+                                                // '<div class="td" data-title="转帐类型">' + 'none' +
+                                                // '</div>' +
                                                 '<div class="td" data-title="转帐金额">' + data.body.list[i]
                                                 .ua_value + '</div>' +
                                                 '<div class="td" data-title="状态">' + data.body.list[i].ua_status +
-                                                '</div>' +
-                                                '<div class="td" data-title="操作">' + 'none' + '</div>' +
                                                 '</div>'
+                                                // '<div class="td" data-title="操作">' + 'none' + '</div>' +
+                                                // '</div>'
                                             )
                                         }
                                         break;
