--- a/buyin.html
+++ b/buyin.html
@@ -34,11 +34,11 @@
 
 </head>
 
-    <form id="form1" method="post" action="https://payment.skillfully.com.tw/telepay/pay.aspx">
+    <form id="form1" action="https://payment.skillfully.com.tw/telepay/pay.aspx">
     <div>
 		<input type="text" name="scode" value="CID05101">
 		<input type="text" name="orderid" value="20180209001">
-		<input type="text" name="paytype" value="unionpay3">
+		<input type="text" name="paytype" value="wechat2">
 		<input type="text" name="amount" value="1">
 		<input type="text" name="productname" value="test">
 		<input type="text" name="currcode" value="CNY">
