--- a/Live-Discount.html
+++ b/Live-Discount.html
@@ -74,7 +74,7 @@
                     <li class="jq-nav-option">
                         <a href="Live-Electric.html">电子游戏</a>
                     </li>
-                    <li class="jq-nav-option">
+                    <li class="jq-nav-option active">
                         <a href="Live-Discount.html">优惠讯息</a>
                     </li>
                     <li class="jq-nav-option">
@@ -89,6 +89,9 @@
         <main>
             <section class="sect-discount jq-sect-discount">
                 <div class="container"></div>
+                <div class="btn-action">
+                    <input class="btn btn-bg-blue jq-btn-more" type="button" value="MORE">
+                </div>
             </section>
         </main>
         <footer>
@@ -284,12 +287,15 @@
         <script>
             // Public
             var _phone_key
+
             function setCookie(_sess) {
                 sessionStorage.session = _sess;
             }
+
             function clearCookie() {
                 sessionStorage.session = '';
             }
+
             function checkPhone(namber) {
                 var phone = namber
                 if (!(/^1[34578]\d{9}$/.test(phone))) {
@@ -300,6 +306,7 @@
                     _phone_key = true;
                 }
             }
+
             function userInformation() {
                 $.ajax({
                     url: "http://ldyllive.com/api/Api/getUser?sess=" + sessionStorage.session,
@@ -448,12 +455,16 @@
             });
 
             // Privity
+            var _more_key = 2;
+            var _page_total
+            var _result_length
+
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getAnnouncemetList?sess=" + sessionStorage.session +
-                        "&p=1&limit=5",
+                    url: "http://ldyllive.com/api/Api/getAnnouncemetList?limit=5&p=1&type=action",
                     type: "GET",
                     success: function (data) {
+                        _page_total = data.body.pageinfo.total;
                         var _each = $(".jq-sect-discount").find('.container');
                         var _length = data.body.list.length;
                         if (data.status) {
@@ -482,6 +493,55 @@
                                             '</div>' +
                                             '</div>'
                                         )
+                                    }
+                                    break;
+                            }
+                        }
+                    }
+                });
+            });
+
+            $('.jq-btn-more').click(function () {
+                $.ajax({
+                    url: "http://ldyllive.com/api/Api/getAnnouncemetList?limit=5&p=" + _more_key +
+                        "&type=action",
+                    type: "GET",
+                    success: function (data) {
+                        console.log(data)
+                        var _each = $(".jq-sect-discount").find('.container');
+                        var _length = data.body.list.length;
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    _result_length = $('.jq-sect-discount').find('.row').length;
+                                    for (i = 0; i < _length; i++) {
+                                        _each.append(
+                                            '<div class="row">' +
+                                            '<div class="discount-group jq-notice-group">' +
+                                            '<div class="img-container">' +
+                                            '<img class="absolute-center-xs img" src="images/announcemet/' +
+                                            data.body.list[i].an_image + '" alt="">' +
+                                            '</div>' +
+                                            '<p class="title">' +
+                                            '<i class="icon-ic-broadcast1"></i>' +
+                                            '<span style="display: inline-block; margin-right: 20px;">' +
+                                            data.body.list[i].an_title + '</span>' +
+                                            '<span>' + data.body.list[i].an_datetime +
+                                            '</span>' +
+                                            '</p>' +
+                                            '<p class="detail jq-detail">' + data.body.list[i].an_content +
+                                            '</p>' +
+                                            '<div class="discount-action">' +
+                                            '<a class="jq-btn-notice-more" href="javascript:void(0)">更多内容 ></a>' +
+                                            '</div>' +
+                                            '</div>' +
+                                            '</div>'
+                                        )
+                                    }
+                                    if (_result_length == _page_total) {
+                                        $('.jq-btn-more').hide();
+                                    } else {
+                                        _more_key += 1;
                                     }
                                     break;
                             }
