--- a/Member-CashRecord.html
+++ b/Member-CashRecord.html
@@ -149,72 +149,29 @@
                                         <p class="title">纪录类型</p>
                                         <a href="javascript:void(0)" class="option jq-member-option active">AG</a>
                                     </div>
-                                    <div class="date-group-container clear">
+                                    <div class="date-group-container jq-date-group-container clear">
                                         <p class="title">时间区间</p>
                                         <div class="inner">
                                             <input type="text" id="from" name="from" placeholder="起始时间">
                                             <label for="to">至</label>
                                             <input type="text" id="to" name="to" placeholder="结束时间">
-                                            <a class="btn btn-bg-blue" href="javascript:void(0)">
+                                            <a class="btn btn-bg-blue ajax-btn-cash-time" href="javascript:void(0)">
                                                 <i class="icon-ic-search"></i>
                                                 <span>搜寻</span>
                                             </a>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="member-table">
+                                <div class="member-table" data-daily-table='1'>
                                     <div class="thead">
                                         <div class="tr">
                                             <div class="th">日期</div>
                                             <div class="th">游戏编号</div>
-                                            <div class="th">游戏名称</div>
+                                            <div class="th">游戏类别</div>
                                             <div class="th">下注金额</div>
-                                            <div class="th">派彩</div>
-                                            <div class="th">状态</div>
                                         </div>
                                     </div>
-                                    <div class="tbody">
-                                        <div class="tr">
-                                            <div class="td" data-title="日期">2018-01-07 20:36:22</div>
-                                            <div class="td" data-title="游戏编号">---</div>
-                                            <div class="td" data-title="游戏名称">---</div>
-                                            <div class="td" data-title="下注金额">50000</div>
-                                            <div class="td" data-title="派彩">---</div>
-                                            <div class="td" data-title="状态">---</div>
-                                        </div>
-                                        <div class="tr">
-                                            <div class="td" data-title="日期">2018-01-07 20:36:22</div>
-                                            <div class="td" data-title="游戏编号">---</div>
-                                            <div class="td" data-title="游戏名称">---</div>
-                                            <div class="td" data-title="下注金额">50000</div>
-                                            <div class="td" data-title="派彩">---</div>
-                                            <div class="td" data-title="状态">---</div>
-                                        </div>
-                                        <div class="tr">
-                                            <div class="td" data-title="日期">2018-01-07 20:36:22</div>
-                                            <div class="td" data-title="游戏编号">---</div>
-                                            <div class="td" data-title="游戏名称">---</div>
-                                            <div class="td" data-title="下注金额">50000</div>
-                                            <div class="td" data-title="派彩">---</div>
-                                            <div class="td" data-title="状态">---</div>
-                                        </div>
-                                        <div class="tr">
-                                            <div class="td" data-title="日期">2018-01-07 20:36:22</div>
-                                            <div class="td" data-title="游戏编号">---</div>
-                                            <div class="td" data-title="游戏名称">---</div>
-                                            <div class="td" data-title="下注金额">50000</div>
-                                            <div class="td" data-title="派彩">---</div>
-                                            <div class="td" data-title="状态">---</div>
-                                        </div>
-                                        <div class="tr">
-                                            <div class="td" data-title="日期">2018-01-07 20:36:22</div>
-                                            <div class="td" data-title="游戏编号">---</div>
-                                            <div class="td" data-title="游戏名称">---</div>
-                                            <div class="td" data-title="下注金额">50000</div>
-                                            <div class="td" data-title="派彩">---</div>
-                                            <div class="td" data-title="状态">---</div>
-                                        </div>
-                                    </div>
+                                    <div class="tbody"></div>
                                 </div>
                             </div>
                         </div>
@@ -577,7 +534,73 @@
                     }
                 });
             });
-            
+
+            // Privity
+            function cash_change(_start_type, _end_type) {
+                $("[data-daily-table]").find('.tbody').find('.tr').remove();
+
+                if (_start_type == undefined || _end_type == undefined) {
+                    $.ajax({
+                        url: "http://ldyllive.com/api/Api/getThirdBetByUser?sess=" + sessionStorage.session,
+                        type: "GET",
+                        success: function (data) {
+                            var _each = $("[data-daily-table=1]").find('.tbody');
+                            var _length = data.body.list.length;
+                            if (data.status) {
+                                switch (data.status) {
+                                    case 100:
+                                        for (i = 0; i < _length; i++) {
+                                            _each.append(
+                                                '<div class="tr">' +
+                                                    '<div class="td" data-title="日期">' + data.body.list[i].transactionTime + '</div>' +
+                                                    '<div class="td" data-title="游戏编号">' + data.body.list[i].gameCode + '</div>' +
+                                                    '<div class="td" data-title="游戏类别">' + data.body.list[i].gameCategory + '</div>' +
+                                                    '<div class="td" data-title="下注金额">' + data.body.list[i].betAmount + '</div>' +
+                                                '</div>'
+                                            )
+                                        }
+                                        break;
+                                }
+                            }
+                        }
+                    });
+                } else {
+                    $.ajax({
+                        url: "http://ldyllive.com/api/Api/getThirdBetByUser?sess=" + sessionStorage.session +
+                            "&start_date=" + _start_type + "&end_date=" + _end_type,
+                        type: "GET",
+                        success: function (data) {
+                            var _each = $("[data-daily-table=1]").find('.tbody');
+                            var _length = data.body.list.length;
+                            if (data.status) {
+                                switch (data.status) {
+                                    case 100:
+                                        for (i = 0; i < _length; i++) {
+                                            _each.append(
+                                                '<div class="tr">' +
+                                                    '<div class="td" data-title="日期">' + data.body.list[i].transactionTime + '</div>' +
+                                                    '<div class="td" data-title="游戏编号">' + data.body.list[i].gameCode + '</div>' +
+                                                    '<div class="td" data-title="游戏类别">' + data.body.list[i].gameCategory + '</div>' +
+                                                    '<div class="td" data-title="下注金额">' + data.body.list[i].betAmount + '</div>' +
+                                                '</div>'
+                                            )
+                                        }
+                                        break;
+                                }
+                            }
+                        }
+                    });
+                }
+            }
+
+            $(window).load(function () {
+                cash_change();
+            });
+            $('.ajax-btn-cash-time').click(function () {
+                var _start = $('.jq-date-group-container').find('[name=from]').val();
+                var _end = $('.jq-date-group-container').find('[name=to]').val();
+                cash_change(_start, _end);
+            });
         </script>
     </div>
 </body>
