--- a/Member-Password.html
+++ b/Member-Password.html
@@ -145,7 +145,7 @@
                             <a href="javascript:void(0)" class="col-xs-6 jq-member-tag active" data-password="user">登入密码变更</a>
                             <a href="javascript:void(0)" class="col-xs-6 jq-member-tag" data-password="cash">资金密码变更</a>
                         </div>
-                        <div class="container jq-user-password">
+                        <div class="container password jq-user-password">
                             <div class="row">
                                 <div class="input-group-container clear">
                                     <p class="title">请输入旧密码</p>
@@ -170,7 +170,7 @@
                                 <input class="btn btn-bg-blue ajax-btn-userpassword" type="button" value="确认变更">
                             </div>
                         </div>
-                        <div class="container jq-user-cashpassword-first" style="display: none;">
+                        <div class="container password jq-user-cashpassword-first" style="display: none;">
                             <div class="row">
                                 <div class="input-group-container clear">
                                     <p class="title">请输入新密码</p>
@@ -189,7 +189,7 @@
                                 <input class="btn btn-bg-blue ajax-btn-cashpassword-first" type="button" value="设定密码">
                             </div>
                         </div>
-                        <div class="container jq-user-cashpassword" style="display: none;">
+                        <div class="container password jq-user-cashpassword" style="display: none;">
                             <div class="row">
                                 <div class="input-group-container clear">
                                     <p class="title">请输入旧密码</p>
@@ -234,17 +234,11 @@
                         </li>
                     </ul>
                     <ul class="service">
-                        <li>
-                            <a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>
-                            <div class="img-container">
-                                <img class="img absolute-center-xs" src="img/qrcode.png" alt="">
-                            </div>
+                        <li class="jq-service-wechat">
+                            
                         </li>
-                        <li>
-                            <a href="javascript:void(0)" class="btn btn-bg-blue">QQ客服</a>
-                            <div class="img-container">
-                                <img class="img absolute-center-xs" src="img/qrcode.png" alt="">
-                            </div>
+                        <li class="jq-service-QQ">
+                            
                         </li>
                     </ul>
                     <p class="copyright">2018 乐鼎国际 版权所有.All Rights Reserved</p>
@@ -444,6 +438,32 @@
             }
 
             $(window).load(function () {
+                $.ajax({
+                    url: "http://ldyllive.com/api/Api/getFooterInfo",
+                    type: "GET",
+                    success: function (data) {
+                        console.log(data)
+                        var _each_wechat = $('.jq-service-wechat');
+                        var _each_QQ = $('.jq-service-QQ')
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    _each_wechat.append(
+                                        '<a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>' +
+                                        '<div class="img-container">' +
+                                            '<img class="img absolute-center-xs" src="images/webconfig/' + data.body.list.wechat_qr_image.wc_value + '" alt="">' +
+                                        '</div>'
+                                    )
+                                    _each_QQ.append(
+                                        '<a href="javascript:void(0)" class="btn btn-bg-blue">QQ客服</a>' +
+                                        '<div class="img-container">' +
+                                            '<img class="img absolute-center-xs" src="images/webconfig/' + data.body.list.qq_qr_image.wc_value + '" alt="">' +
+                                        '</div>'
+                                    )
+                            }
+                        }
+                    }
+                });
                 if (sessionStorage.session == undefined || sessionStorage.session == '') {
                     $('.jq-login-before').show();
                     $('.jq-login-after').hide();
