--- a/Member-DailyRecord.html
+++ b/Member-DailyRecord.html
@@ -147,10 +147,10 @@
                                 <div class="member-table-action">
                                     <div class="option-group-container clear">
                                         <p class="title">纪录类型</p>
-                                        <a href="javascript:void(0)" class="option jq-member-option active" data-daily-option="1.2">充值</a>
+                                        <a href="javascript:void(0)" class="option jq-member-option active" data-daily-option="1,2">充值</a>
                                         <a href="javascript:void(0)" class="option jq-member-option" data-daily-option="3">提款</a>
                                         <a href="javascript:void(0)" class="option jq-member-option" data-daily-option="6">优惠</a>
-                                        <a href="javascript:void(0)" class="option jq-member-option" data-daily-option="4.5">转帐</a>
+                                        <a href="javascript:void(0)" class="option jq-member-option" data-daily-option="4,5">转帐</a>
                                     </div>
                                     <div class="date-group-container jq-date-group-container clear">
                                         <p class="title">时间区间</p>
@@ -239,17 +239,11 @@
                         </li>
                     </ul>
                     <ul class="service">
-                        <li>
-                            <a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>
-                            <div class="img-container">
-                                <img class="img absolute-center-xs" src="img/qrcode.png" alt="">
-                            </div>
+                        <li class="jq-service-wechat">
+                            
                         </li>
-                        <li>
-                            <a href="javascript:void(0)" class="btn btn-bg-blue">QQ客服</a>
-                            <div class="img-container">
-                                <img class="img absolute-center-xs" src="img/qrcode.png" alt="">
-                            </div>
+                        <li class="jq-service-QQ">
+                            
                         </li>
                     </ul>
                     <p class="copyright">2018 乐鼎国际 版权所有.All Rights Reserved</p>
@@ -451,6 +445,32 @@
             }
 
             $(window).load(function () {
+                $.ajax({
+                    url: "http://ldyllive.com/api/Api/getFooterInfo",
+                    type: "GET",
+                    success: function (data) {
+                        console.log(data)
+                        var _each_wechat = $('.jq-service-wechat');
+                        var _each_QQ = $('.jq-service-QQ')
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    _each_wechat.append(
+                                        '<a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>' +
+                                        '<div class="img-container">' +
+                                            '<img class="img absolute-center-xs" src="images/webconfig/' + data.body.list.wechat_qr_image.wc_value + '" alt="">' +
+                                        '</div>'
+                                    )
+                                    _each_QQ.append(
+                                        '<a href="javascript:void(0)" class="btn btn-bg-blue">QQ客服</a>' +
+                                        '<div class="img-container">' +
+                                            '<img class="img absolute-center-xs" src="images/webconfig/' + data.body.list.qq_qr_image.wc_value + '" alt="">' +
+                                        '</div>'
+                                    )
+                            }
+                        }
+                    }
+                });
                 if (sessionStorage.session == undefined || sessionStorage.session == '') {
                     $('.jq-login-before').show();
                     $('.jq-login-after').hide();
@@ -580,7 +600,7 @@
             });
 
             // Privity
-            var daily_key = 1.2;
+            var daily_key = '1,2';
 
             function daily_change(_type, _start_type, _end_type) {
                 $("[data-daily-table]").find('.tbody').find('.tr').remove();
@@ -594,7 +614,7 @@
                         end_date: _end_type,
                     }),
                     success: function (data) {
-                        if (_type == 1.2) {
+                        if (_type == '1,2') {
                             var _each = $("[data-daily-table=1]").find('.tbody');
                             var _length = data.body.list.length;
                             if (data.status) {
@@ -618,7 +638,7 @@
                                         break;
                                 }
                             }
-                        } else if (_type == 3) {
+                        } else if (_type == '3') {
                             var _each = $("[data-daily-table=2]").find('.tbody');
                             var _length = data.body.list.length;
                             if (data.status) {
@@ -642,7 +662,7 @@
                                         break;
                                 }
                             }
-                        } else if (_type == 6) {
+                        } else if (_type == '6') {
                             var _each = $("[data-daily-table=3]").find('.tbody');
                             var _length = data.body.list.length;
                             if (data.status) {
@@ -666,7 +686,7 @@
                                         break;
                                 }
                             }
-                        } else if (_type == 4.5) {
+                        } else if (_type == '4,5') {
                             var _each = $("[data-daily-table=4]").find('.tbody');
                             var _length = data.body.list.length;
                             if (data.status) {
@@ -701,7 +721,7 @@
                         "&type=3&p=1&limt=5",
                     type: "POST",
                     data: JSON.stringify({
-                        type: 1.2,
+                        type: '1,2',
                     }),
                     success: function (data) {
                         var _each = $("[data-daily-table=1]").find('.tbody');
@@ -718,13 +738,13 @@
                                             '<div class="td" data-title="充值金额">' + data.body.list[
                                                 i]
                                             .ua_value + '</div>' +
-                                            '<div class="td" data-title="充值方式">' + 'none' +
-                                            '</div>' +
+                                            // '<div class="td" data-title="充值方式">' + 'none' +
+                                            // '</div>' +
                                             '<div class="td" data-title="状态">' + data.body.list[
                                                 i].ua_status +
                                             '</div>' +
-                                            '<div class="td" data-title="操作">' + 'none' +
-                                            '</div>' +
+                                            // '<div class="td" data-title="操作">' + 'none' +
+                                            // '</div>' +
                                             '</div>'
                                         )
                                     }
