--- a/Member-Discount.html
+++ b/Member-Discount.html
@@ -143,6 +143,9 @@
                     </ul>
                     <div class="member-detail jq-member-detail">
                         <div class="container"></div>
+                        <div class="btn-action">
+                            <input class="btn btn-bg-blue jq-btn-more" type="button" value="MORE">
+                        </div>
                     </div>
                 </div>
             </section>
@@ -163,17 +166,11 @@
                         </li>
                     </ul>
                     <ul class="service">
-                        <li>
-                            <a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>
-                            <div class="img-container">
-                                <img class="img absolute-center-xs" src="img/qrcode.png" alt="">
-                            </div>
+                        <li class="jq-service-wechat">
+                            
                         </li>
-                        <li>
-                            <a href="javascript:void(0)" class="btn btn-bg-blue">QQ客服</a>
-                            <div class="img-container">
-                                <img class="img absolute-center-xs" src="img/qrcode.png" alt="">
-                            </div>
+                        <li class="jq-service-QQ">
+                            
                         </li>
                     </ul>
                     <p class="copyright">2018 乐鼎国际 版权所有.All Rights Reserved</p>
@@ -375,6 +372,32 @@
             }
 
             $(window).load(function () {
+                $.ajax({
+                    url: "http://ldyllive.com/api/Api/getFooterInfo",
+                    type: "GET",
+                    success: function (data) {
+                        console.log(data)
+                        var _each_wechat = $('.jq-service-wechat');
+                        var _each_QQ = $('.jq-service-QQ')
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    _each_wechat.append(
+                                        '<a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>' +
+                                        '<div class="img-container">' +
+                                            '<img class="img absolute-center-xs" src="images/webconfig/' + data.body.list.wechat_qr_image.wc_value + '" alt="">' +
+                                        '</div>'
+                                    )
+                                    _each_QQ.append(
+                                        '<a href="javascript:void(0)" class="btn btn-bg-blue">QQ客服</a>' +
+                                        '<div class="img-container">' +
+                                            '<img class="img absolute-center-xs" src="images/webconfig/' + data.body.list.qq_qr_image.wc_value + '" alt="">' +
+                                        '</div>'
+                                    )
+                            }
+                        }
+                    }
+                });
                 if (sessionStorage.session == undefined || sessionStorage.session == '') {
                     $('.jq-login-before').show();
                     $('.jq-login-after').hide();
@@ -504,12 +527,16 @@
             });
 
             // Privity
+            var _more_key = 2;
+            var _page_total
+            var _result_length
+
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getAnnouncemetList?sess=" + sessionStorage.session +
-                        "&p=1&limit=5",
+                    url: "http://ldyllive.com/api/Api/getAnnouncemetList?limit=5&p=1&type=action",
                     type: "GET",
                     success: function (data) {
+                        _page_total = data.body.pageinfo.total;
                         var _each = $(".jq-member-detail").find('.container');
                         var _length = data.body.list.length;
                         if (data.status) {
@@ -538,6 +565,55 @@
                                             '</div>' +
                                             '</div>'
                                         )
+                                    }
+                                    break;
+                            }
+                        }
+                    }
+                });
+            });
+
+            $('.jq-btn-more').click(function () {
+                $.ajax({
+                    url: "http://ldyllive.com/api/Api/getAnnouncemetList?limit=5&p=" + _more_key +
+                        "&type=action",
+                    type: "GET",
+                    success: function (data) {
+                        console.log(data)
+                        var _each = $(".jq-member-detail").find('.container');
+                        var _length = data.body.list.length;
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    _result_length = $(".jq-member-detail").find('.row').length;
+                                    for (i = 0; i < _length; i++) {
+                                        _each.append(
+                                            '<div class="row">' +
+                                            '<div class="discount-group jq-notice-group">' +
+                                            '<div class="img-container">' +
+                                            '<img class="absolute-center-xs img" src="images/announcemet/' +
+                                            data.body.list[i].an_image + '" alt="">' +
+                                            '</div>' +
+                                            '<p class="title">' +
+                                            '<i class="icon-ic-broadcast1"></i>' +
+                                            '<span style="display: inline-block; margin-right: 20px;">' +
+                                            data.body.list[i].an_title + '</span>' +
+                                            '<span>' + data.body.list[i].an_datetime +
+                                            '</span>' +
+                                            '</p>' +
+                                            '<p class="detail jq-detail">' + data.body.list[i].an_content +
+                                            '</p>' +
+                                            '<div class="discount-action">' +
+                                            '<a class="jq-btn-notice-more" href="javascript:void(0)">更多内容 ></a>' +
+                                            '</div>' +
+                                            '</div>' +
+                                            '</div>'
+                                        )
+                                    }
+                                    if (_result_length == _page_total) {
+                                        $('.jq-btn-more').hide();
+                                    } else {
+                                        _more_key += 1;
                                     }
                                     break;
                             }
