--- a/Home-Index.html
+++ b/Home-Index.html
@@ -470,7 +470,7 @@
                                     window.location.reload();
                                     break;
                                 case '999':
-                                    alert('帐号或密码错误');
+                                    alert(data.message);
                             }
                         }
                     }
